--- a/backend/package.json
+++ b/backend/package.json
@@ -24,10 +24,15 @@
     "@nestjs/common": "^7.6.13",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.13",
+    "@nestjs/jwt": "^7.2.0",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-fastify": "^7.6.13",
     "fastify-multipart": "^4.0.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.15.1",
     "node-fetch": "^2.6.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6"
@@ -41,6 +46,8 @@
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.31",
     "@types/node-fetch": "^2.5.8",
+    "@types/passport-jwt": "^3.0.5",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
