move jwt secret key to env

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MICROSOFT_COGNITIVE_SUBSCRIPTION_KEY=db253be3dc684784b22a47c11d85d3e8
 MICROSOFT_COGNITIVE_REGION=canadacentral
+JWT_SECRET='CODEGENERATIONSOFTWARE'
