--- a/backend/package.json
+++ b/backend/package.json
@@ -25,17 +25,21 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.13",
     "@nestjs/jwt": "^7.2.0",
+    "@nestjs/mongoose": "^7.2.4",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-fastify": "^7.6.13",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "fastify-multipart": "^4.0.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.15.1",
-    "node-fetch": "^2.6.1",
+    "mongoose": "^5.11.19",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6"
+    "rxjs": "^6.6.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.6",
@@ -49,6 +53,7 @@
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
     "eslint": "^7.20.0",
