--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint": "eslint src/**/*.ts --fix"
   },
   "dependencies": {
     "@nestjs/common": "^7.6.13",
@@ -41,7 +41,6 @@
     "@nestjs/schematics": "^7.2.9",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.33",
-    "@types/node-fetch": "^2.5.8",
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
     "@types/uuid": "^8.3.0",
