Add api key for humantic ai

--- a/backend/.env
+++ b/backend/.env
@@ -8,3 +8,5 @@ DATABASE_URI=mongodb://in_house:sg74NARySP3m8q8jLeDE@95.181.157.142:52068/in_hou
 
 MICROSOFT_COGNITIVE_SUBSCRIPTION_KEY=db253be3dc684784b22a47c11d85d3e8
 MICROSOFT_COGNITIVE_REGION=canadacentral
+
+HUMANTIC_AI_API_KEY=chrexec_fa2fb682138fb00b8d139264a253cdfe
