Add algilia app id and api key

--- a/backend/.env
+++ b/backend/.env
@@ -10,3 +10,6 @@ MICROSOFT_COGNITIVE_SUBSCRIPTION_KEY=db253be3dc684784b22a47c11d85d3e8
 MICROSOFT_COGNITIVE_REGION=canadacentral
 
 HUMANTIC_AI_API_KEY=chrexec_fa2fb682138fb00b8d139264a253cdfe
+
+ALGOLIA_APP_ID=E28ZZ2V6A8
+ALGOLIA_API_KEY=89613e21c4c18dfbee0d5991e09c9ac1
