--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=3000
-ADDRESS=localhost
+ADDRESS=https://inhouse-stage.azurewebsites.net
 
 JWT_SECRET=CODEGENERATIONSOFTWARE
 JWT_EXPIRATION=1y
