--- a/.github/workflows/stage_inhouse-stage.yml
+++ b/.github/workflows/stage_inhouse-stage.yml
@@ -23,9 +23,11 @@ jobs:
 
     - name: npm install, build, and test
       run: |
-        npm install
-        npm run build --if-present
-        npm run test --if-present
+        cd ./backend
+        npm install -g yarn
+        npm install -g ffmpeg
+        yarn
+        yarn start:prod --if-present
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
