--- a/.github/workflows/stage_inhouse-stage-frontend.yml
+++ b/.github/workflows/stage_inhouse-stage-frontend.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         node-version: '14.x'
 
-    - name: npm install, build, and test
+    - name: build frontend
       run: |
         cd ./frontend
         npm install
@@ -31,6 +31,11 @@ jobs:
       with:
         name: node-app
         path: ./frontend/build
+    - name: Upload node_modules for deployment job
+      uses: actions/upload-artifact@v2
+      with:
+        name: node-app
+        path: ./frontend/node_modules    
 
   deploy:
     runs-on: ubuntu-latest
@@ -52,4 +57,4 @@ jobs:
         app-name: 'inhouse-stage-frontend'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_0022b1d2ce254b59b0a7aea9a2384fbd }}
-        package: .
+        package: main.js
