--- a/.github/workflows/stage_inhouse-stage-frontend.yml
+++ b/.github/workflows/stage_inhouse-stage-frontend.yml
@@ -34,7 +34,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: .
     environment:
       name: 'production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
