--- a/.github/workflows/stage_inhouse-stage-frontend.yml
+++ b/.github/workflows/stage_inhouse-stage-frontend.yml
@@ -34,9 +34,10 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     environment:
       name: 'production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      url: http://inhouse-stage-frontend.azurewebsites.net
 
     steps:
     - name: Download artifact from build job
