--- a/.github/workflows/stage_inhouse-stage-frontend.yml
+++ b/.github/workflows/stage_inhouse-stage-frontend.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
       with:
-        name: node-app
+        name: inhouse-stage-frontend
         path: ./frontend/build
 
   deploy:
@@ -43,7 +43,7 @@ jobs:
     - name: Download artifact from build job
       uses: actions/download-artifact@v2
       with:
-        name: node-app
+        name: inhouse-stage-frontend
 
     - name: 'Deploy to Azure Web App'
       id: deploy-to-webapp
