--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-fastify": "^7.6.13",
     "algoliasearch": "^4.8.6",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "fastify-multipart": "^4.0.1",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@nestjs/cli": "^7.5.6",
     "@nestjs/schematics": "^7.2.9",
+    "@types/bcrypt": "^3.0.0",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.33",
     "@types/passport-jwt": "^3.0.5",
