--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=3000
-ADDRESS=https://inhouse-stage.azurewebsites.net
+ADDRESS=localhost
 
 JWT_SECRET=CODEGENERATIONSOFTWARE
 JWT_EXPIRATION=1y
