--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,14 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\"",
-    "start": "node dist/main",
+    "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint src/**/*.ts --fix"
   },
   "dependencies": {
+    "@nestjs/cli": "^7.5.6",
     "@nestjs/common": "^7.6.13",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.13",
@@ -38,7 +39,6 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.6",
     "@nestjs/schematics": "^7.2.9",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.33",
