--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "fastify-multipart": "^4.0.1",
+    "ffmpeg-static": "^4.3.0",
     "gridfile": "^1.0.2",
     "microsoft-cognitiveservices-speech-sdk": "^1.15.1",
     "mongoose": "^5.11.20",
@@ -42,6 +43,7 @@
     "@nestjs/cli": "^7.5.6",
     "@nestjs/schematics": "^7.2.9",
     "@types/bcrypt": "^3.0.0",
+    "@types/ffmpeg-static": "^3.0.0",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.33",
     "@types/passport-jwt": "^3.0.5",
